--- a/index.html
+++ b/index.html
@@ -12,30 +12,58 @@
                 <div class="pos-f-t">
                 <div class="collapse" id="navbarToggleExternalContent">
                 <div class="bg-dark p-4">
-                <h5 class="text-white h4">Collapsed content</h5>
-                <span class="text-muted">Toggleable via the navbar brand.</span>
+                    <div class=navigation>
+                        <nav class="nav nav-pills flex-column flex-sm-row">
+                    <div class=buttons>
+                      <ul>
+                        <li><a class="btn btn-light mybutton" href="#">Care for your plants</a></li>
+                        <li><a class="btn btn-light mybutton" href="#">About Us</a></li>
+                        <li><a class="btn btn-light mybutton" href="#">Contact us</a></li>
+                      </ul>
+                    </div>
+                      </nav>
+                    </div>
                 </div>
                 </div>
                 <nav class="navbar navbar-dark bg-dark">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
+                <h5>How not to kill your plants</h5>
                 </nav>
                 </div>
       <div>
-      <h1>How not to kill your plants</h1>
-        <ul>
-          <li><a href="#">Care for your plants</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Contact us</a></li>
-        </ul>
-      <p> Plants, both indoors and out, are lovely additions to any décor. They are generally easy to take care of and maintain, and will thrive when given proper care and treatment. Whether you're unsure of how to care for your plants and you regulary kill your plants, read on for information on how to properly care for indoor and garden plants.</p>
     </div>
+                <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active" data-interval="10000">
+                  <img src="pictures/slide5.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item" data-interval="2000">
+                  <img src="pictures/slide6.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="pictures/slide7.jpg" class="d-block w-100" alt="...">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+            <div class=text>
+              <p> Plants, both indoors and out, are lovely additions to any décor. They are generally easy to take care of and maintain, and will thrive when given proper care and treatment. Whether you're unsure of how to care for your plants and you regulary kill your plants, read on for information on how to properly care for indoor and garden plants.</p>
+            </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
   <script src="https://getbootstrap.com/docs/4.1/assets/js/vendor/popper.min.js"></script>
   <script src="https://getbootstrap.com/docs/4.1/dist/js/bootstrap.min.js"></script>
+  $('.carousel').carousel()
   </body>
 </html>
