changes to cards

--- a/index.html
+++ b/index.html
@@ -35,35 +35,63 @@
       <div>
     </div>
                 <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
-              <div class="carousel-inner">
-                <div class="carousel-item active" data-interval="10000">
-                  <img src="pictures/slide5.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item" data-interval="2000">
-                  <img src="pictures/slide6.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="pictures/slide7.jpg" class="d-block w-100" alt="...">
-                </div>
-              </div>
-              <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
+            <div class="carousel-inner">
+            <div class="carousel-item active" data-interval="50000">
+            <img src="pictures/slide8.jpg" class="d-block w-100" alt="...">
             </div>
+            <div class="carousel-item" data-interval="5000">
+            <img src="pictures/slide6.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item" data-interval="5000">
+            <img src="pictures/slide7.jpg" class="d-block w-100" alt="...">
+            </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+            </a>
+            </div>
+
             <div class=text>
-              <p> Plants, both indoors and out, are lovely additions to any décor. They are generally easy to take care of and maintain, and will thrive when given proper care and treatment. Whether you're unsure of how to care for your plants and you regulary kill your plants, read on for information on how to properly care for indoor and garden plants.</p>
+              <p> Plants, both indoors and out, are lovely additions to any décor. They are generally easy to take care of and maintain, and will thrive when given proper care and treatment. Whether you're unsure of how to care for your plants and you regulary kill them, read on for information on how to properly care for your indoor plants.</p>
             </div>
+
+            <div class="card-deck">
+  <div class="card">
+    <img src="pictures/card1.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h4 class="card-title">Succulent Plants</h4>
+      <p class="card-text">Succulent are growing in popularity as indoor plants. These plants have developed the ability to
+                          store water when it is available, for use during
+                          dry periods so they should never be over watered. Most of them are winter-hardy, surviving freezing
+                          temperatures and snow cover.</p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="pictures/card2.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h4 class="card-title">Tropical Plants</h4>
+      <p class="card-text">Because many tropical house plants originally grew in the shady canopy layer of the rainforest, they usually do quite well in indoor settings far from the suns direct rays.
+                          Tropical house plants should not be watered so much that they accumulate a pool of water in the outside container.</p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="pictures/card3.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h4 class="card-title">Fruit Plants</h4>
+      <p class="card-text">If you keep your subtropical fruit plants and trees outside during the warm months and inside during the winter, you'll need to acclimate your plants to the change in growing environment. Subtropical fruits grown in containers require more frequent watering than those grown in the ground.</p>
+    </div>
+  </div>
+</div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
   <script src="https://getbootstrap.com/docs/4.1/assets/js/vendor/popper.min.js"></script>
   <script src="https://getbootstrap.com/docs/4.1/dist/js/bootstrap.min.js"></script>
-  $('.carousel').carousel()
   </body>
 </html>
