--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                 <div class="bg-dark p-4">
                     <div class=navigation>
                         <nav class="nav nav-pills flex-column flex-sm-row">
-                    <div class=buttons>
-                      <ul>
+                    <div >
+                      <ul class="text-center">
                         <li><a class="btn btn-light mybutton" href="#">Care for your plants</a></li>
                         <li><a class="btn btn-light mybutton" href="#">About Us</a></li>
                         <li><a class="btn btn-light mybutton" href="#">Contact us</a></li>
@@ -32,8 +32,8 @@
                 <h5>How not to kill your plants</h5>
                 </nav>
                 </div>
-      <div>
-    </div>
+                <div>
+                </div>
                 <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
             <div class="carousel-item active" data-interval="50000">
