--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Plant Protectors</title>
+    <title>Plant Smashers</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css">
@@ -14,10 +14,11 @@
                 <div class="bg-dark p-4">
                     <div class=navigation>
                         <nav class="nav nav-pills flex-column flex-sm-row">
-                    <div >
+                    <div>
                       <ul class="text-center">
-                        <li><a class="btn btn-light mybutton" href="#">Care for your plants</a></li>
-                        <li><a class="btn btn-light mybutton" href="#">About Us</a></li>
+                        <li><a class="btn btn-light mybutton" href="file:///Users/Mercus/Desktop/Coding%20Course/GitHub/Plant-Protectors/index.html">Home</a></li>
+                        <li><a class="btn btn-light mybutton" href="file:///Users/Mercus/Desktop/Coding%20Course/GitHub/Plant-Protectors/3index.html">Care for your plants</a></li>
+                        <li><a class="btn btn-light mybutton" href="file:///Users/Mercus/Desktop/Coding%20Course/GitHub/Plant-Protectors/5index.html">About Us</a></li>
                         <li><a class="btn btn-light mybutton" href="#">Contact us</a></li>
                       </ul>
                     </div>
@@ -29,7 +30,7 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
-                <h5>How not to kill your plants</h5>
+                <h5><a href="file:///Users/Mercus/Desktop/Coding%20Course/GitHub/Plant-Protectors/index.html#">How not to kill your plants</h5></a>
                 </nav>
                 </div>
                 <div>
@@ -62,7 +63,9 @@
 
             <div class="card-deck">
   <div class="card">
+    <a href="file:///Users/Mercus/Desktop/Coding%20Course/GitHub/Plant-Protectors/1index.html">
     <img src="pictures/card1.jpg" class="card-img-top" alt="...">
+    </a>
     <div class="card-body">
       <h4 class="card-title">Succulent Plants</h4>
       <p class="card-text">Succulent are growing in popularity as indoor plants. These plants have developed the ability to
@@ -72,18 +75,22 @@
     </div>
   </div>
   <div class="card">
+    <a href="file:///Users/Mercus/Desktop/Coding%20Course/GitHub/Plant-Protectors/4index.html">
+    <img src="pictures/card3.jpg" class="card-img-top" alt="...">
+    </a>
+    <div class="card-body">
+      <h4 class="card-title">Fruit Plants</h4>
+      <p class="card-text">If you keep your subtropical fruit plants and trees outside during the warm months and inside during the winter, you'll need to acclimate your plants to the change in growing environment. Subtropical fruits grown in containers require more frequent watering than those grown in the ground.</p>
+    </div>
+  </div>
+  <div class="card">
+    <a href="file:///Users/Mercus/Desktop/Coding%20Course/GitHub/Plant-Protectors/2index.html">
     <img src="pictures/card2.jpg" class="card-img-top" alt="...">
+    <a/>
     <div class="card-body">
       <h4 class="card-title">Tropical Plants</h4>
       <p class="card-text">Because many tropical house plants originally grew in the shady canopy layer of the rainforest, they usually do quite well in indoor settings far from the suns direct rays.
                           Tropical house plants should not be watered so much that they accumulate a pool of water in the outside container.</p>
-    </div>
-  </div>
-  <div class="card">
-    <img src="pictures/card3.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h4 class="card-title">Fruit Plants</h4>
-      <p class="card-text">If you keep your subtropical fruit plants and trees outside during the warm months and inside during the winter, you'll need to acclimate your plants to the change in growing environment. Subtropical fruits grown in containers require more frequent watering than those grown in the ground.</p>
     </div>
   </div>
 </div>
