--- a/1index.html
+++ b/1index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Plant Protectors</title>
+    <title>Plant Smashers</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css">
@@ -16,8 +16,9 @@
                         <nav class="nav nav-pills flex-column flex-sm-row">
                     <div class=buttons>
                       <ul>
-                        <li><a class="btn btn-light mybutton" href="#">Care for your plants</a></li>
-                        <li><a class="btn btn-light mybutton" href="#">About Us</a></li>
+                        <li><a class="btn btn-light mybutton" href="file:///Users/Mercus/Desktop/Coding%20Course/GitHub/Plant-Protectors/index.html">Home</a></li>
+                        <li><a class="btn btn-light mybutton" href="file:///Users/Mercus/Desktop/Coding%20Course/GitHub/Plant-Protectors/3index.html">Care for your plants</a></li>
+                        <li><a class="btn btn-light mybutton" href="file:///Users/Mercus/Desktop/Coding%20Course/GitHub/Plant-Protectors/5index.html">About Us</a></li>
                         <li><a class="btn btn-light mybutton" href="#">Contact us</a></li>
                       </ul>
                     </div>
@@ -29,15 +30,27 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
-                <h5>How not to kill your plants</h5>
+                <h5><a href="file:///Users/Mercus/Desktop/Coding%20Course/GitHub/Plant-Protectors/index.html#">How not to kill your plants</h5></a>
                 </nav>
                 </div>
       <div>
     </div>
 
-    <img src="pictures/succulent.jpg">
-
-
+  <div>
+    <img class=careimage src="pictures/succulent.jpg">
+    <h3> How to care for your succulent</h3>
+<div class=succulents>
+    <ol>
+      <li class="text-one"><strong>1. Choose the right succulent for you</strong></li>
+      <p class="text-1">Most succulents like direct sunlight, but if all you have is a shaded corner in your house, go with low light-tolerant plants like mother-in-law tongue. If you plan to grow your succulent in a hanging planter, a trailing variety like string of bananas is a great choice.</p>
+      <li class="text-two"><strong>2. Choose your container</strong></li>
+      <p class="text-2">When repotting, use a container that has a drainage hole and is at least 1 to 2 inches larger than the nursery container.Fill the bottom one-third of the container with pre-moistened potting mix, then position your plant inside and backfill with more pre-moistened potting mix.</p>
+      <li class="text-three"><strong>3. Place the potted succulent in a sunny location</strong></li>
+      <p class="text-3">Most succulents prefer at least 6 hours of sun per day, so try to place them near a south- or east-facing window. You may notice your succulents becoming spindly or stretching toward the light if they don’t get enough sun.</p>
+      <li><strong>4. Allow the potting mix to dry out between waterings</strong></li>
+      <p class="text-4">The number-one mistake many people make with succulents is overwatering them. It’s best to water more, but less frequently. Saturate the potting mix thoroughly (while ensuring water flows out of the drainage hole properly) but allow the mix to dry out slightly before the next watering. If the potting mix stays consistently wet every day, the plant may eventually die.</p>
+    </ol>
+  </div>
 
 
 
