--- a/3index.html
+++ b/3index.html
@@ -16,10 +16,10 @@
                         <nav class="nav nav-pills flex-column flex-sm-row">
                     <div class=buttons>
                       <ul>
-                        <li><a class="btn btn-light mybutton" href="file:///Users/Mercus/Desktop/Coding%20Course/GitHub/Plant-Protectors/index.html">Home</a></li>
-                        <li><a class="btn btn-light mybutton" href="file:///Users/Mercus/Desktop/Coding%20Course/GitHub/Plant-Protectors/3index.html">Care for your plants</a></li>
-                        <li><a class="btn btn-light mybutton" href="file:///Users/Mercus/Desktop/Coding%20Course/GitHub/Plant-Protectors/5index.html">About Us</a></li>
-                        <li><a class="btn btn-light mybutton" href="#">Contact us</a></li>
+                        <li><a class="btn btn-light mybutton" href="./index.html">Home</a></li>
+                        <li><a class="btn btn-light mybutton" href="./3index.html">Care for your plants</a></li>
+                        <li><a class="btn btn-light mybutton" href="./5index.html">About Us</a></li>
+                        <li><a class="btn btn-light mybutton" href="./6index.html">Contact us</a></li>
                       </ul>
                     </div>
                       </nav>
@@ -30,7 +30,7 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
-                <h5><a href="file:///Users/Mercus/Desktop/Coding%20Course/GitHub/Plant-Protectors/index.html#">How not to kill your plants</h5></a>
+                <h5><a href="./index.html#">How not to kill your plants</h5></a>
                 </nav>
                 </div>
       <div>
@@ -41,7 +41,7 @@
 
 <div class="selectioncards1">
   <div class="card text-white bg-dark mb-3">
-  <a href="file:///Users/Mercus/Desktop/Coding%20Course/GitHub/Plant-Protectors/1index.html">
+  <a href="./1index.html">
   <img src="pictures/succ.jpg" class="card-img" alt="..." style="max-width: 1000px;">
 <div class="card-img-overlay">
 <h5 class="card-title">Succulent Plants</h5>
@@ -53,7 +53,7 @@
   <div class="selectioncards1">
 
     <div class="card text-white bg-dark mb-3">
-      <a href="file:///Users/Mercus/Desktop/Coding%20Course/GitHub/Plant-Protectors/4index.html">
+      <a href="./4index.html">
 <img src="pictures/fruit.jpg" class="card-img" alt="..." style="max-width: 1000px;">
 <div class="card-img-overlay">
   <h5 class="card-title">Fruit Plants</h5>
@@ -65,7 +65,7 @@
     <div class="selectioncards1">
 
       <div class="card text-white bg-dark mb-3">
-        <a href="file:///Users/Mercus/Desktop/Coding%20Course/GitHub/Plant-Protectors/2index.html">
+        <a href="./2index.html">
   <img src="pictures/trop.jpg" class="card-img" alt="..." style="max-width: 1000px;">
   <div class="card-img-overlay">
     <h5 class="card-title">Tropical Plants</h5>
