--- a/6index.html
+++ b/6index.html
@@ -17,10 +17,10 @@
                         <nav class="nav nav-pills flex-column flex-sm-row">
                     <div class=buttons>
                       <ul>
-                        <li><a class="btn btn-light mybutton" href="file:///Users/Mercus/Desktop/Coding%20Course/GitHub/Plant-Protectors/index.html">Home</a></li>
-                        <li><a class="btn btn-light mybutton" href="file:///Users/Mercus/Desktop/Coding%20Course/GitHub/Plant-Protectors/3index.html">Care for your plants</a></li>
-                        <li><a class="btn btn-light mybutton" href="file:///Users/Mercus/Desktop/Coding%20Course/GitHub/Plant-Protectors/5index.html">About Us</a></li>
-                        <li><a class="btn btn-light mybutton" href="#">Contact us</a></li>
+                        <li><a class="btn btn-light mybutton" href="./index.html">Home</a></li>
+                        <li><a class="btn btn-light mybutton" href="./3index.html">Care for your plants</a></li>
+                        <li><a class="btn btn-light mybutton" href="./5index.html">About Us</a></li>
+                        <li><a class="btn btn-light mybutton" href="./6index.html">Contact us</a></li>
                       </ul>
                     </div>
                       </nav>
@@ -31,7 +31,7 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
-                <h5><a href="file:///Users/Mercus/Desktop/Coding%20Course/GitHub/Plant-Protectors/index.html#">How not to kill your plants</h5></a>
+                <h5><a href="./index.html#">How not to kill your plants</h5></a>
                 </nav>
                 </div>
       <div>
