--- a/index.html
+++ b/index.html
@@ -1,104 +1,104 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Plant Smashers</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./style.css">
-  </head>
-  <body>
-    <div class="box">
-                <div class="pos-f-t">
-                <div class="collapse" id="navbarToggleExternalContent">
-                <div class="bg-dark p-4">
-                    <div class=navigation>
-                        <nav class="nav nav-pills flex-column flex-sm-row">
-                    <div>
-                      <ul class="text-center">
-                        <li><a class="btn btn-light mybutton" href="file:///Users/Mercus/Desktop/Coding%20Course/GitHub/Plant-Protectors/index.html">Home</a></li>
-                        <li><a class="btn btn-light mybutton" href="file:///Users/Mercus/Desktop/Coding%20Course/GitHub/Plant-Protectors/3index.html">Care for your plants</a></li>
-                        <li><a class="btn btn-light mybutton" href="file:///Users/Mercus/Desktop/Coding%20Course/GitHub/Plant-Protectors/5index.html">About Us</a></li>
-                        <li><a class="btn btn-light mybutton" href="#">Contact us</a></li>
-                      </ul>
-                    </div>
-                      </nav>
-                    </div>
-                </div>
-                </div>
-                <nav class="navbar navbar-dark bg-dark">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-                </button>
-                <h5><a href="file:///Users/Mercus/Desktop/Coding%20Course/GitHub/Plant-Protectors/index.html#">How not to kill your plants</h5></a>
-                </nav>
-                </div>
-                <div>
-                </div>
-                <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-            <div class="carousel-item active" data-interval="50000">
-            <img src="pictures/slide8.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item" data-interval="5000">
-            <img src="pictures/slide6.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item" data-interval="5000">
-            <img src="pictures/slide7.jpg" class="d-block w-100" alt="...">
-            </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-            </a>
-            </div>
-
-            <div class=text>
-              <p> Plants, both indoors and out, are lovely additions to any décor. They are generally easy to take care of and maintain, and will thrive when given proper care and treatment. Whether you're unsure of how to care for your plants and you regulary kill them, read on for information on how to properly care for your indoor plants.</p>
-            </div>
-
-            <div class="card-deck">
-  <div class="card">
-    <a href="file:///Users/Mercus/Desktop/Coding%20Course/GitHub/Plant-Protectors/1index.html">
-    <img src="pictures/card1.jpg" class="card-img-top" alt="...">
-    </a>
-    <div class="card-body">
-      <h4 class="card-title">Succulent Plants</h4>
-      <p class="card-text">Succulent are growing in popularity as indoor plants. These plants have developed the ability to
-                          store water when it is available, for use during
-                          dry periods so they should never be over watered. Most of them are winter-hardy, surviving freezing
-                          temperatures and snow cover.</p>
+<head>
+  <meta charset="utf-8">
+  <title>Plant Smashers</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="./style.css">
+</head>
+<body>
+  <div class="box">
+    <div class="pos-f-t">
+      <div class="collapse" id="navbarToggleExternalContent">
+        <div class="bg-dark p-4">
+          <div class=navigation>
+            <nav class="nav nav-pills flex-column flex-sm-row">
+              <div>
+                <ul class="text-center">
+                  <li><a class="btn btn-light mybutton" href="./index.html">Home</a></li>
+                  <li><a class="btn btn-light mybutton" href="./3index.html">Care for your plants</a></li>
+                  <li><a class="btn btn-light mybutton" href="./5index.html">About Us</a></li>
+                  <li><a class="btn btn-light mybutton" href="./6index.html">Contact us</a></li>
+                </ul>
+              </div>
+            </nav>
+          </div>
+        </div>
+      </div>
+      <nav class="navbar navbar-dark bg-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <h5><a href="./index.html#">How not to kill your plants</h5></a>
+      </nav>
     </div>
-  </div>
-  <div class="card">
-    <a href="file:///Users/Mercus/Desktop/Coding%20Course/GitHub/Plant-Protectors/4index.html">
-    <img src="pictures/card3.jpg" class="card-img-top" alt="...">
-    </a>
-    <div class="card-body">
-      <h4 class="card-title">Fruit Plants</h4>
-      <p class="card-text">If you keep your subtropical fruit plants and trees outside during the warm months and inside during the winter, you'll need to acclimate your plants to the change in growing environment. Subtropical fruits grown in containers require more frequent watering than those grown in the ground.</p>
+    <div>
     </div>
-  </div>
-  <div class="card">
-    <a href="file:///Users/Mercus/Desktop/Coding%20Course/GitHub/Plant-Protectors/2index.html">
-    <img src="pictures/card2.jpg" class="card-img-top" alt="...">
-    <a/>
-    <div class="card-body">
-      <h4 class="card-title">Tropical Plants</h4>
-      <p class="card-text">Because many tropical house plants originally grew in the shady canopy layer of the rainforest, they usually do quite well in indoor settings far from the suns direct rays.
-                          Tropical house plants should not be watered so much that they accumulate a pool of water in the outside container.</p>
-    </div>
-  </div>
-</div>
+    <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-interval="50000">
+          <img src="pictures/slide8.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item" data-interval="5000">
+          <img src="pictures/slide6.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item" data-interval="5000">
+          <img src="pictures/slide7.jpg" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-  <script src="https://getbootstrap.com/docs/4.1/assets/js/vendor/popper.min.js"></script>
-  <script src="https://getbootstrap.com/docs/4.1/dist/js/bootstrap.min.js"></script>
-  </body>
-</html>
+    <div class=text>
+      <p> Plants, both indoors and out, are lovely additions to any décor. They are generally easy to take care of and maintain, and will thrive when given proper care and treatment. Whether you're unsure of how to care for your plants and you regulary kill them, read on for information on how to properly care for your indoor plants.</p>
+    </div>
+
+    <div class="card-deck">
+      <div class="card">
+        <a href="./1index.html">
+          <img src="pictures/card1.jpg" class="card-img-top" alt="...">
+        </a>
+        <div class="card-body">
+          <h4 class="card-title">Succulent Plants</h4>
+          <p class="card-text">Succulent are growing in popularity as indoor plants. These plants have developed the ability to
+            store water when it is available, for use during
+            dry periods so they should never be over watered. Most of them are winter-hardy, surviving freezing
+            temperatures and snow cover.</p>
+          </div>
+        </div>
+        <div class="card">
+          <a href="./4index.html">
+            <img src="pictures/card3.jpg" class="card-img-top" alt="...">
+          </a>
+          <div class="card-body">
+            <h4 class="card-title">Fruit Plants</h4>
+            <p class="card-text">If you keep your subtropical fruit plants and trees outside during the warm months and inside during the winter, you'll need to acclimate your plants to the change in growing environment. Subtropical fruits grown in containers require more frequent watering than those grown in the ground.</p>
+          </div>
+        </div>
+        <div class="card">
+          <a href="./2index.html">
+            <img src="pictures/card2.jpg" class="card-img-top" alt="...">
+            <a/>
+            <div class="card-body">
+              <h4 class="card-title">Tropical Plants</h4>
+              <p class="card-text">Because many tropical house plants originally grew in the shady canopy layer of the rainforest, they usually do quite well in indoor settings far from the suns direct rays.
+                Tropical house plants should not be watered so much that they accumulate a pool of water in the outside container.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+        <script src="https://getbootstrap.com/docs/4.1/assets/js/vendor/popper.min.js"></script>
+        <script src="https://getbootstrap.com/docs/4.1/dist/js/bootstrap.min.js"></script>
+      </body>
+      </html>
